Update profile photo and CV links in index.html; add profile image and resume PDF

--- a/index.html
+++ b/index.html
@@ -363,11 +363,10 @@
     <div class="main-layout">
         <!-- Sidebar Menu -->
         <aside class="sidebar">
-            <img class="profile-photo" src="https://placehold.co/150x150/bb86fc/e0e0e0?text=FFP" alt="Flávio Filipe Lima dos Santos Porto profile photo">
+            <img class="profile-photo" src="img/profile.jpg" alt="Flávio Filipe Lima dos Santos Porto profile photo">
             <h1 class="name">Flávio Filipe Lima dos Santos Porto</h1>
             <div class="cv-links">
-                <a href="#cv-pt-br">Download CV (pt-br)</a>
-                <a href="#cv-en-us">Download CV (en-us)</a>
+                <a href="docs/resume_flavio_filipe.pdf" target="_blank">Download CV (en-us)</a>
             </div>
             <nav class="sidebar-nav">
                 <a href="#about-me"><i class="fas fa-home"></i> Home</a>
